--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:philip.wang@yale.edu">email</a></li>
-        		<li><a href="https://https://github.com/qpig1989">https://github.com/qpig1989/</a></li>
+        		<li><a href="https://github.com/qpig1989">https://github.com/qpig1989/</a></li>
 			</ul>
 		</footer>
 	</body>
