--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Philip!</h1>
-				<p>I'm a current graduate student at Yale University. <a href="/about">Read more about my life...</a></p>
+				<p>I'm a current graduate student at Yale University. <a href="https://scholar.google.com/citations?user=8Lfz3m8AAAAJ&hl=en">Read more about research...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
