--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about.html">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
