--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="https://qpig1989.github.io">Home</a></li>
+	        	<li><a href="/">About</a></li>
+        		<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
