--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Philip!</h1>
-				<p>I'm a current graduate student at Yale University. <a href="https://scholar.google.com/citations?user=8Lfz3m8AAAAJ&hl=en">Read more about my research at Google Scholar.</a></p>
+        		<h1>About my research</h1>
+				<p>Segregation of Granular Materials</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
