--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
     		<div class="blurb">
         		<h1>About my research</h1>
 				<p>Segregation of Granular Materials</p>
+				<p>Combustion Physics<p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
