--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>About my research</h1>
+			<h1>Myself</h1>
+				<p>?</p>
+        		<h1>Research</h1>
 				<p>Segregation of Granular Materials</p>
 				<p>Combustion Physics</p>
     		</div><!-- /.blurb -->
