--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/index.html">Home</a></li>
-	        	<li><a href="/about.html">About</a></li>
+        		<li><a href="https://qpig1989.github.io/index.html">Home</a></li>
+	        	<li><a href="https://qpig1989.github.io/about.html">About</a></li>
         		<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
