--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
+			<h1>Myself</h1>
         		<h1>Research</h1>
 				<p>Segregation of Granular Materials</p>
 				<p>Combustion Physics</p>
