--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about.html">About</a></li>
-        		<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
+        		<li><a href="CV/">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
@@ -24,6 +24,7 @@
     		<ul>
         		<li><a href="mailto:philip.wang@yale.edu">email</a></li>
         		<li><a href="https://github.com/qpig1989">https://github.com/qpig1989/</a></li>
+			<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
 			</ul>
 		</footer>
 	</body>
