--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="https://qpig1989.github.io">Home</a></li>
 	        	<li><a href="https://qpig1989.github.io/about.html">About</a></li>
-        		<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
+			<li><a href="/CV">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
