--- a/research.html
+++ b/research.html
@@ -9,14 +9,13 @@
 		<nav>
     		<ul>
         		<li><a href="https://qpig1989.github.io">Home</a></li>
-	        	<li><a href="https://qpig1989.github.io/about.html">About</a></li>
+	        	<li><a href="https://qpig1989.github.io/research.html">About</a></li>
 			<li><a href="/CV">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<h2>Myself</h2>
         		<h2>Research</h2>
 				<p>Segregation of Granular Materials</p>
 				<p>Combustion Physics</p>
