--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Philip!</h1>
 				<p>I'm a current graduate student at Yale University. <a href="https://scholar.google.com/citations?user=8Lfz3m8AAAAJ&hl=en">Read more about my research on Google Scholar.</a></p>
+				<h2>About</h2>
+				<p>My current research focus is the numerical investigation of granular materials with Prof. Corey O'Hern at Yale University.</p>
+				<p>I was previously an undergraduate exchange student at Tohoku University working on microgravity combustion with Prof. Kaoru Maruta.</p>
+				<p>I did my master's at USC under the supervision of Prof. P. D. Ronney on edgeflame propagation.</p>
+				<p>Prior to joining O'Hern group, I worked for Prof. Alessandro Gomez (Yale) on turbulent combustion for two years.</p>
+	
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
