--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="https://qpig1989.github.io">Home</a></li>
-	        	<li><a href="https://qpig1989.github.io/research.html">About</a></li>
+	        	<li><a href="https://qpig1989.github.io/research.html">Research</a></li>
 			<li><a href="/CV">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
