--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:philip.wang@yale.edu">email</a></li>
-        		<li><a href="https://github.com/qpig1989">https://github.com/qpig1989/</a></li>
+        		<li><a href="https://github.com/philipwang1989">https://github.com/philipwang1989/</a></li>
 			<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
 			</ul>
 		</footer>
