--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/research.html">Research</a></li>
+			<li><a href="/project.html">Project</a></li>
         		<li><a href="/CV">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
