--- a/project.html
+++ b/project.html
@@ -8,10 +8,9 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="https://qpig1989.github.io">Home</a></li>
-	        	<li><a href="https://qpig1989.github.io/project.html">Project</a></li>
-			      <li><a href="/CV">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="https://philipwang1989.github.io">Home</a></li>
+	        	<li><a href="https://philipwang1989.github.io/project.html">Project</a></li>
+			<li><a href="/CV">CV</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -23,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:philip.wang@yale.edu">email</a></li>
-        		<li><a href="https://github.com/qpig1989">https://github.com/qpig1989/</a></li>
+        		<li><a href="https://github.com/philipwang1989">https://github.com/philipwang1989/</a></li>
 			<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
 			</ul>
 		</footer>
