--- a/research.html
+++ b/research.html
@@ -8,8 +8,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="https://qpig1989.github.io">Home</a></li>
-	        	<li><a href="https://qpig1989.github.io/research.html">Research</a></li>
+        		<li><a href="https://philipwang1989.github.io">Home</a></li>
+	        	<li><a href="https://philipwang1989.github.io/research.html">Research</a></li>
 			<li><a href="/CV">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
@@ -24,7 +24,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:philip.wang@yale.edu">email</a></li>
-        		<li><a href="https://github.com/qpig1989">https://github.com/qpig1989/</a></li>
+        		<li><a href="https://github.com/philipwang1989">https://github.com/philipwang1989/</a></li>
 			<li><a href="https://www.linkedin.com/in/philipwang1989/">LinkedIn</a></li>
 			</ul>
 		</footer>
