--- a/project.html
+++ b/project.html
@@ -9,6 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="https://philipwang1989.github.io">Home</a></li>
+			<li><a href="https://philipwang1989.github.io/research.html">Research</a></li>
 	        	<li><a href="https://philipwang1989.github.io/project.html">Project</a></li>
 			<li><a href="/CV">CV</a></li>
     		</ul>
