--- a/research.html
+++ b/research.html
@@ -9,9 +9,9 @@
 		<nav>
     		<ul>
         		<li><a href="https://philipwang1989.github.io">Home</a></li>
-	        	<li><a href="https://philipwang1989.github.io/research.html">Research</a></li>
+			<li><a href="https://philipwang1989.github.io/research.html">Research</a></li>
+	        	<li><a href="https://philipwang1989.github.io/project.html">Project</a></li>
 			<li><a href="/CV">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
